tests/snapshots/cli__run_file@main_stackoverflow_mutual.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: tests/inputs/main_stackoverflow_mutual.gleam
---
STDOUT
RangeError: Maximum call stack size exceeded

STDERR
