tests/snapshots/cli__run_file@main_string.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/main_string.gleam
---
STDOUT


STDERR
