tests/snapshots/cli__run_file@sgleam.gleam.snap
---
source: tests/cli.rs
expression: "formatdoc!\n{\n    \"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"\n}"
input_file: tests/inputs/sgleam.gleam
---
STDOUT

STDERR
sgleam: is a reserved module name.
