tests/snapshots/cli__run_images@line1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/line1.gleam
---
<svg width="30.0" height="30.0" xmlns="http://www.w3.org/2000/svg">
  <line x1="0.0" y1="0.0" x2="30.0" y2="30.0" fill="none" stroke="rgba(0, 0, 0, 1.0)" />
</svg>
