tests/snapshots/cli__run_images@overlay1.gleam.snap
---
source: tests/cli.rs
expression: "format!(\"{out}\")"
input_file: tests/images/overlay1.gleam
---
<svg width="60.0" height="60.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <ellipse cx="30.0" cy="30.0" rx="30.0" ry="15.0" transform="rotate(0.0 30.0 30.0)" fill="rgba(128, 0, 128, 1.0)" />
    <rect x="15.0" y="0.0" width="30.0" height="60.0" transform="rotate(0.0 30.0 30.0)" fill="rgba(255, 165, 0, 1.0)" />
  </g>
</svg>
